Fix page jitter, increase font size on smaller screens

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -14,6 +14,9 @@ html, body {
   position: relative;
   padding-bottom: $footer-height;
 
+  @include breakpoint(lg) { font-size: inherit; }
+  font-size: 22px;
+
   .primary-logo {
     position: relative;
     top: 7px;
